@@ -3,6 +3,12 @@ Revision history for Perl extension RPi::WiringPi.
 2.3611 UNREL
         - added fritzing and breadboard layout for the ADC/DAC test
           configuration for brewbuild CI
+        - clean up Pin::set_interrupt() code to call API code directly
+        - fix up tests that require sudo (we now recall the tests with sudo if
+          they are not called with it)
+        - in pud(), we no longer set the pin to INPUT automatically
+        - we now require WiringPi::API 2.3609 due to PUD/Interrupt fixes there
+        - added proper interrupt and pud tests
 
 2.3610  2017-03-13
         - added in support in adc() to allow usage of the MCP3008 ADC from
